WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272839
Cleanup hardened mach exceptions and formalize fallback
https://bugs.webkit.org/show_bug.cgi?id=272839
Summary
Cleanup hardened mach exceptions and formalize fallback
Keith Miller
Reported
2024-04-17 11:28:39 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-17 11:28:54 PDT
<
rdar://problem/126634499
>
Keith Miller
Comment 2
2024-04-17 11:33:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27400
EWS
Comment 3
2024-04-17 20:14:30 PDT
Committed
277648@main
(ba07b609dde3): <
https://commits.webkit.org/277648@main
> Reviewed commits have been landed. Closing PR #27400 and removing active labels.
Keith Miller
Comment 4
2024-04-24 19:14:25 PDT
Reopening because it was reverted.
Keith Miller
Comment 5
2024-04-24 19:16:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27723
EWS
Comment 6
2024-04-25 11:20:15 PDT
Committed
277994@main
(7a6fd55b43d7): <
https://commits.webkit.org/277994@main
> Reviewed commits have been landed. Closing PR #27723 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug